--- a/lylichsiquan.html
+++ b/lylichsiquan.html
@@ -71,7 +71,7 @@
     <input type="text" id="ingame" placeholder="Tên trong game...">
 
     <label for="cccd">CCCD:</label>
-    <input type="text" id="cccd" placeholder="6 số cuối CCCD trong game...">
+    <input type="text" id="cccd" placeholder="CCCD trong game...">
 
     <label for="ten">Tên thật:</label>
     <input type="text" id="ten" placeholder="Tên đời thực...">
@@ -150,3 +150,4 @@
   </script>
 </body>
 </html>
+
