--- a/donxinnghiphep.html
+++ b/donxinnghiphep.html
@@ -74,7 +74,7 @@
     <input type="text" id="ten" placeholder="Nhập tên trong game...">
 
     <label for="cccd">CCCD:</label>
-    <input type="text" id="cccd" placeholder="6 số CCCD trong game...">
+    <input type="text" id="cccd" placeholder="CCCD trong game...">
 
     <label for="ngaybatdau">Ngày bắt đầu nghỉ:</label>
     <input type="date" id="ngaybatdau">
@@ -124,3 +124,4 @@ Ghi chú thêm: ${ghichu}`;
 
 </body>
 </html>
+
