--- a/baolanhtoipham.html
+++ b/baolanhtoipham.html
@@ -132,22 +132,34 @@
     <div class="col">
       <strong>Mức Độ 1:</strong>
       <ul class="crime-list">
-        <li><label><input type="checkbox" data-muc="1" value="Cản trở người thi hành công vụ"> Cản trở người thi hành công vụ</label></li>
-        <li><label><input type="checkbox" data-muc="1" value="Gây rối nơi công cộng"> Gây rối nơi công cộng</label></li>
-        <li><label><input type="checkbox" data-muc="1" value="Tụ tập trái phép"> Tụ tập trái phép</label></li>
-        <li><label><input type="checkbox" data-muc="1" value="Không chấp hành hiệu lệnh cảnh sát"> Không chấp hành hiệu lệnh cảnh sát</label></li>
-        <li><label><input type="checkbox" data-muc="1" value="Lái xe thiếu giấy tờ"> Lái xe thiếu giấy tờ</label></li>
-      </ul>
+        <li><label><input type="checkbox" data-muc="1" value="Tội cản trở người thi hành công vụ"> Tội cản trở người thi hành công vụ</label></li>
+        <li><label><input type="checkbox" data-muc="1" value="Tội hỗ trợ đồng bọn, trợ giúp tội phạm"> Tội hỗ trợ đồng bọn và trợ giúp tội phạm</label></li>
+        <li><label><input type="checkbox" data-muc="1" value="Tội không giao nộp hung khí đã gây án"> Tội không giao nộp hung khí đã gây án</label></li>
+        <li><label><input type="checkbox" data-muc="1" value="Tội tàng trữ hoặc sử dụng Giáp tại nơi công cộng"> Tội tàng trữ hoặc sử dụng Giáp tại nơi công cộng</label></li>
+        <li><label><input type="checkbox" data-muc="1" value=" Tội giả dạng, tự xưng là người Nhà nước. Tội mặc trang phục mạo danh người Nhà nước">  Tội giả dạng, tự xưng là người Nhà nước. Tội mặc trang phục mạo danh người Nhà nước</label></li>
+        <li><label><input type="checkbox" data-muc="1" value="Tội gây rối trật tự nơi công cộng, gây ảnh hưởng đến cá nhân hay tập thể xung quanh"> Tội gây rối trật tự nơi công cộng, gây ảnh hưởng đến cá nhân hay tập thể xung quanh</label></li>
+        <li><label><input type="checkbox" data-muc="1" value="Tội gây rối trước trụ sở cơ quan nhà nước">Tội gây rối trước trụ sở cơ quan nhà nước</label></li>
+        <li><label><input type="checkbox" data-muc="1" value="Tội trộm cắp bất hợp pháp với nhà công dân"> Tội trộm cắp bất hợp pháp với nhà công dân</label></li>
+        <li><label><input type="checkbox" data-muc="1" value="Tội phá hoại tài sản nhà nước"> Tội phá hoại tài sản nhà nước</label></li>
+    </ul>
     </div>
 
     <div class="col">
       <strong>Mức Độ 2:</strong>
       <ul class="crime-list">
-        <li><label><input type="checkbox" data-muc="2" value="Tàng trữ chất cấm"> Tàng trữ chất cấm</label></li>
-        <li><label><input type="checkbox" data-muc="2" value="Tấn công cảnh sát"> Tấn công cảnh sát</label></li>
-        <li><label><input type="checkbox" data-muc="2" value="Sử dụng vũ khí nóng"> Sử dụng vũ khí nóng</label></li>
-        <li><label><input type="checkbox" data-muc="2" value="Phá hoại tài sản nhà nước"> Phá hoại tài sản nhà nước</label></li>
-        <li><label><input type="checkbox" data-muc="2" value="Tàng trữ vũ khí trái phép"> Tàng trữ vũ khí trái phép</label></li>
+        <li><label><input type="checkbox" data-muc="2" value="Tội tàng trữ chất cấm trái phép"> Tội tàng trữ chất cấm trái phép</label></li>
+        <li><label><input type="checkbox" data-muc="2" value="Tội vu khống người khác"> Tội vu khống người khác</label></li>
+        <li><label><input type="checkbox" data-muc="2" value="Tội có hành động, lời lẽ xúc phạm đến danh dự, nhân phẩm của người khác"> Tội có hành động, lời lẽ xúc phạm đến danh dự, nhân phẩm của người khác</label></li>
+        <li><label><input type="checkbox" data-muc="2" value="Tội có hành động, lời nói đe doạ nhân viên Ban Ngành Nhà Nước ( Cảnh Sát, Bác Sĩ...)"> Tội có hành động, lời nói đe doạ nhân viên Ban Ngành Nhà Nước ( Cảnh Sát, Bác Sĩ...)</label></li>
+        <li><label><input type="checkbox" data-muc="2" value="Tội sử dụng vũ khí thô sơ nơi công cộng p"> Tội sử dụng vũ khí thô sơ nơi công cộng </label></li>
+
+        <li><label><input type="checkbox" data-muc="2" value=" Tội tàng trữ vũ khí nóng trái phép">  Tội tàng trữ vũ khí nóng trái phép</label></li>
+        <li><label><input type="checkbox" data-muc="2" value="Tội sử dụng vũ khí nóng trái phép"> Tội sử dụng vũ khí nóng trái phép</label></li>
+        <li><label><input type="checkbox" data-muc="2" value="Tội sử dụng vũ khí nóng nơi công cộng"> Tội sử dụng vũ khí nóng nơi công cộng</label></li>
+        <li><label><input type="checkbox" data-muc="2" value="Tội lừa đảo chiếm đoạt tài sản người khác"> Tội lừa đảo chiếm đoạt tài sản người khác</label></li>
+        <li><label><input type="checkbox" data-muc="2" value="Tội gây thương tích chưa nghiêm trọng cho người khác"> Tội gây thương tích chưa nghiêm trọng cho người khác </label></li>
+        <li><label><input type="checkbox" data-muc="2" value=" Tội chống đối người thi hành công vụ">  Tội chống đối người thi hành công vụ</label></li>
+        <li><label><input type="checkbox" data-muc="2" value="Tội xâm nhập trụ sở, nơi làm việc thuộc Ban ngành Nhà nước"> Tội xâm nhập trụ sở, nơi làm việc thuộc Ban ngành Nhà nước</label></li>
       </ul>
     </div>
   </div>
@@ -222,3 +234,4 @@ Tiền bảo lãnh: ${soTien.value}
 
 </body>
 </html>
+
